--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="/js/js.js"></script>
 
     <title>大逸嚴選</title> 
-	<link rel="shortcut icon" href="https://drive.google.com/file/d/1pFGeOiIFNgNG-5WnAOcFj8btYuqupKEj/view?usp=sharing" style="border-radius:50%;"><!--網頁瀏覽器最上方的圖片--->
+	<link rel="shortcut icon" href="/images/logo.jpg" style="border-radius:50%;"><!--網頁瀏覽器最上方的圖片--->
 	<link rel="stylesheet" href="/css/style.css/style.css">
   </head>
   <body> 
@@ -37,7 +37,7 @@
 	  		<div class="container">
 				<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 				  <a class="navbar-brand" href="index.html" >
-					  <img src="https://drive.google.com/file/d/1pFGeOiIFNgNG-5WnAOcFj8btYuqupKEj/view?usp=sharing" alt="" style="width: 50px; border-radius: 50%;" class="fa-2x wow  animate__heartBeat" data-wow-duration="2s" data-wow-delay="1s"data-wow-iteration="50">
+					  <img src="/images/logo.jpg" alt="" style="width: 50px; border-radius: 50%;" class="fa-2x wow  animate__heartBeat" data-wow-duration="2s" data-wow-delay="1s"data-wow-iteration="50">
 
 					<!-- <i class="fas fa-dice-d20 fa-2x wow  animate__heartBeat" data-wow-duration="2s" data-wow-delay="1s"data-wow-iteration="50"></i>			  		 -->
 				  </a>
