--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <script src="/js/js.js"></script>
 
     <title>大逸嚴選</title> 
-	<link rel="shortcut icon" href="/images/logo.jpg" style="border-radius:50%;"><!--網頁瀏覽器最上方的圖片--->
-	<link rel="stylesheet" href="/css/style.css/style.css">
+	<link rel="shortcut icon" href="./images/logo.jpg" style="border-radius:50%;"><!--網頁瀏覽器最上方的圖片--->
+	<link rel="stylesheet" href="./css/style.css/style.css">
   </head>
   <body> 
 	<!--   	********************************1.1******************************************* -->
@@ -37,7 +37,7 @@
 	  		<div class="container">
 				<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 				  <a class="navbar-brand" href="index.html" >
-					  <img src="/images/logo.jpg" alt="" style="width: 50px; border-radius: 50%;" class="fa-2x wow  animate__heartBeat" data-wow-duration="2s" data-wow-delay="1s"data-wow-iteration="50">
+					  <img src="./images/logo.jpg" alt="" style="width: 50px; border-radius: 50%;" class="fa-2x wow  animate__heartBeat" data-wow-duration="2s" data-wow-delay="1s"data-wow-iteration="50">
 
 					<!-- <i class="fas fa-dice-d20 fa-2x wow  animate__heartBeat" data-wow-duration="2s" data-wow-delay="1s"data-wow-iteration="50"></i>			  		 -->
 				  </a>
@@ -161,13 +161,13 @@
 		</ol>
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img src="#" class="d-block w-100 bg-cover active  " alt="..." style="background-image: url(/images/17.jpg); height: 83vh">
+				<img src="#" class="d-block w-100 bg-cover active  " alt="..." style="background-image: url(./images/17.jpg); height: 83vh">
 			</div>
 			<div class="carousel-item">
-				<img src="#" class="d-block w-100 bg-cover" alt="..." style="background-image: url(/images/8.jpg); height: 83vh">
+				<img src="#" class="d-block w-100 bg-cover" alt="..." style="background-image: url(./images/8.jpg); height: 83vh">
 			</div>
 			<div class="carousel-item">
-				<img src="#" class="d-block w-100 bg-cover" alt="..." style="background-image: url(/images/10.jpg); height: 83vh">
+				<img src="#" class="d-block w-100 bg-cover" alt="..." style="background-image: url(./images/10.jpg); height: 83vh">
 			</div>
 		</div>
 		<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -187,7 +187,7 @@
 				<div class="card mb-3" style="max-width: 1000px;">
 					<div class="row no-gutters">
 						<div class="col-md-6 " >
-							<img src="/images/1-1.jpg" alt="..." style="max-width: 210px">
+							<img src="./images/1-1.jpg" alt="..." style="max-width: 210px">
 						</div>
 						<div class="col-md-6">
 							<div class="card-body">
@@ -204,7 +204,7 @@
 				<div class="card mb-3" style="max-width: 1000px;">
 					<div class="row no-gutters">
 						<div class="col-md-6">
-							<img src="/images/1-2.jpg" alt="..." style="max-width: 210px">
+							<img src="./images/1-2.jpg" alt="..." style="max-width: 210px">
 						</div>
 						<div class="col-md-6">
 							<div class="card-body">
@@ -222,7 +222,7 @@
 				<div class="card mb-3" style="max-width: 1000px;">
 					<div class="row no-gutters">
 						<div class="col-md-6">
-							<img src="/images/1-3.jpg" alt="..." style="max-width:210px;">
+							<img src="./images/1-3.jpg" alt="..." style="max-width:210px;">
 						</div>
 						<div class="col-md-6">
 							<div class="card-body">
@@ -240,7 +240,7 @@
 				<div class="card mb-3" style="max-width: 1000px;">
 					<div class="row no-gutters">
 						<div class="col-md-6">
-							<img src="/images/1-4.jpg" alt="..." style="max-width: 210px">
+							<img src="./images/1-4.jpg" alt="..." style="max-width: 210px">
 						</div>
 						<div class="col-md-6">
 							<div class="card-body">
@@ -263,7 +263,7 @@
 	</div>
 	<div class="box-info">
 		<div class="embed-responsive embed-responsive-16by9 mt-1 ">
-			<iframe class="embed-responsive-item" src="/images/videl.mp4"
+			<iframe class="embed-responsive-item" src="./images/videl.mp4"
 				allowfullscreen="" allow="autoplay" style="height: 100%;">
 			</iframe>
 		</div>		
