--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/all.min.css">
+    <link rel="stylesheet" href="./css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-	<script src="/js/wow.min.js"></script>
-    <script src="/js/js.js"></script>
+	<script src="./js/wow.min.js"></script>
+    <script src="./js/js.js"></script>
 
     <title>大逸嚴選</title> 
 	<link rel="shortcut icon" href="./images/logo.jpg" style="border-radius:50%;"><!--網頁瀏覽器最上方的圖片--->
@@ -458,7 +458,7 @@
   	<!--   	********************************10.*********************************** -->
   	<section>
 		<div class="row mt-5">
-			<div class="col-md-6 bg-cover" style="background-image: url(/images/紅酒番茄-1.jpg);">
+			<div class="col-md-6 bg-cover" style="background-image: url(./images/紅酒番茄-1.jpg);">
 				<div class="row">
 					<div class="col-md-7 my-5 text-white ml-5 p-3" style="background-color: rgba(0,0,0,0.3);">
 						<small class="text-danger font-weight-bold">加入我們</small>
@@ -468,7 +468,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-md-6 bg-cover" style="background-image: url(/images/蘿蔔大根.jpg);">
+			<div class="col-md-6 bg-cover" style="background-image: url(./images/蘿蔔大根.jpg);">
 				<div class="row">
 					<div class="col-md-7 my-5 text-white ml-5 p-3" style="background-color: rgba(0,0,0,0.3);">
 						<small class="text-danger font-weight-bold">加入我們</small>
