--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
   	<!--   	********************************6.*********************************** -->
   	<section style="position: relative;">
 		<div class="row">
-			<div class="col-md-5 bg-cover mt-5 mx-5" style="position: absolute;background-image: url(/images/紅酒番茄-1.jpg);top: 0;bottom: 0; border-radius: 20%;"></div>
+			<div class="col-md-5 bg-cover mt-5 mx-5" style="position: absolute;background-image: url(./images/紅酒番茄-1.jpg);top: 0;bottom: 0; border-radius: 20%;"></div>
 		</div>
 		<div class="container">
 			<div class="row justify-content-end"><!-- justify-content-end = 右邊文字靠右-->
