--- a/index.html
+++ b/index.html
@@ -299,12 +299,12 @@
   	<!--   	********************************6.*********************************** -->
   	<section style="position: relative;">
 		<div class="row">
-			<div class="col-md-5 bg-cover mt-5 mx-5" style="position: absolute;background-image: url(./images/紅酒番茄-1.jpg);top: 0;bottom: 0; border-radius: 20%;"></div>
+			<div class="col-md-5 bg-cover mx-5" style="position: absolute;background-image: url(./images/紅酒番茄-1.jpg);top: 0;bottom: 0; border-radius: 0%;"></div>
 		</div>
-		<div class="container">
+		<div class="container pl-5">
 			<div class="row justify-content-end"><!-- justify-content-end = 右邊文字靠右-->
-				<div class="col-md-7 py-5 mytext">
-					<h3 class="font-weight-bold">大逸嚴選</h3><!-- font-weight-bold = 文字粗體 -->
+				<div class="col-md-7  mytext">
+					<h1 class="font-weight-bold">大逸嚴選</h1><!-- font-weight-bold = 文字粗體 -->
 					<p class="font-weight-bold">
 						🍴西餐廳 🇯🇵日式料理御用食材<br>
 						一包15粒真空包裝<br>
@@ -316,11 +316,11 @@
 					</button>
 					<div class="row mt-3"> <!-- mt-3 = 下方內距3 -->
 						<div class="col-md-6">
-							<h3 class="font-weight-bold">🍷 紅酒番茄</h3>
+							<h2 class="font-weight-bold">🍷 紅酒番茄</h2>
 							<p class="font-weight-bold">天然濃郁的果香、微醺淡雅的迷人酒香、酒漬冰釀後的鮮甜滋味、飽滿扎實又多汁的清爽口感、帶給您又甜又醇的多重享受！</p>
 						</div>
 						<div class="col-md-6">
-							<h3 class="font-weight-bold">🌸梅子番茄</h3>
+							<h2 class="font-weight-bold">🌸梅子番茄</h2>
 							<p class="font-weight-bold">純手工除去多餘蕃茄紅色外套後，冰鎮後的扎實果肉，經過48小時以上浸漬在綜合梅果醬汁裡,果肉充分吸附梅果獨有的酸甜味，獨有的風味讓您無法忘卻。</p>
 						</div>
 					</div>
@@ -412,11 +412,14 @@
 		</div>
 	</section>
   	<!--   	********************************9.*********************************** -->
-  	<section>
+	<section>
   		<div class="contaioner">
   			<div class="row">
   				<div class="col-md-6">
-  					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14560.365550356555!2d120.60847195!3d24.16852755!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34693e048d342aa9%3A0x2b6f18a6783fa3b!2z5Yue5YuV6YOo5Yue5YuV5Yqb55m85bGV572y5Lit5b2w5oqV5YiG572y77yI6Ie65Lit6IG36KiT5bGA77yJ!5e0!3m2!1szh-TW!2stw!4v1617764395311!5m2!1szh-TW!2stw" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+					<iframe
+						src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3643.139294970366!2d120.54289411482169!3d24.061398784436967!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34693908276ee46f%3A0x38dafd457929905a!2z5aSn6YC45Zq06YG4!5e0!3m2!1szh-TW!2stw!4v1623142067865!5m2!1szh-TW!2stw"
+						width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy">
+					</iframe>
   				</div>
   				<div class="col-md-6">
   					<div class="form-group">		<!-- form-group 跟 form-control 兩個是一組的-->
