--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
   	<!--   	********************************5.*********************************** -->
 	<section class="bg-active"> <!-- bg-info = 背景顏色為info -->
 		<div class="container">
-			<div class="row pt-3"> <!-- pt-3 = 內距3 -->
+			<div class="row pt-3 mt-5"> <!-- pt-3 = 內距3 -->
 				<div class="col-md-4">
 					<div class="text p-3 text-center"> <!-- text-center = 文字至中 -->
 						<i class="fab fa-empire fa-8x text-dark wow animate__animated animate__zoomInLeft" data-wow-duration="2s" data-wow-delay="1s"data-wow-iteration="1"></i>
